[package]
name = "tumblr-api"
version = "0.1.0"
authors = ["leo60228 <leo@60228.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.110", features = ["derive"] }
toml = "0.5.6"
oauth-1a = "0.1.1"
anyhow = "1.0.31"
http-types = "2.0.1"
open = "1.4.0"
url = { features = ["serde"], version = "2.1.1" }
tiny_http = "0.7.0"
serde_with = "1.4.0"
mime = { version = "0.4.0-a.0", features = ["serde1"] }
image = "0.23.4"
base64 = "0.12.1"
reqwest = { version = "0.10.4", features = ["blocking", "json"] }
serde_json = "1.0.53"
maplit = "1.0.2"
derive_more = "0.99.7"
pulldown-cmark = "0.7.1"

[patch.crates-io]
url = { git = "https://github.com/servo/rust-url.git" }
mime = { git = "https://github.com/hyperium/mime.git" }
